--- a/AdditionalTable/SKLevelTableViewCell.xib
+++ b/AdditionalTable/SKLevelTableViewCell.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -14,29 +15,41 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="LevelCell" id="KGk-i7-Jjw" customClass="SKLevelTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="LevelCell" rowHeight="93" id="KGk-i7-Jjw" customClass="SKLevelTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="93"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="286" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="286" height="92.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAv-BK-sGO">
-                        <rect key="frame" x="16" y="11" width="190.5" height="22"/>
+                        <rect key="frame" x="16" y="11" width="190.5" height="71"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="71" id="sxJ-M8-aLd"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pTa-7q-pbH">
-                        <rect key="frame" x="251.5" y="11" width="26.5" height="22"/>
+                        <rect key="frame" x="251.5" y="11" width="26.5" height="69"/>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Gf-cJ-ScX">
+                        <rect key="frame" x="232" y="52" width="46" height="30"/>
+                        <state key="normal" title="Button"/>
+                        <connections>
+                            <action selector="additionalButtonAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="MeA-NZ-ozM"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottomMargin" secondItem="0Gf-cJ-ScX" secondAttribute="bottom" id="QrC-Km-fjS"/>
                     <constraint firstItem="pTa-7q-pbH" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="YtN-3q-yex"/>
-                    <constraint firstItem="pTa-7q-pbH" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="eAm-eS-UJf"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="0Gf-cJ-ScX" secondAttribute="trailing" id="btn-VY-hrH"/>
+                    <constraint firstItem="pTa-7q-pbH" firstAttribute="bottom" secondItem="0Gf-cJ-ScX" secondAttribute="bottomMargin" constant="6" id="eAm-eS-UJf"/>
                     <constraint firstItem="cAv-BK-sGO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="hDG-Js-xVX"/>
                     <constraint firstItem="pTa-7q-pbH" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="cAv-BK-sGO" secondAttribute="trailing" id="kWO-gx-c9h"/>
                     <constraint firstItem="cAv-BK-sGO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="nVu-6G-jZQ"/>
@@ -47,9 +60,11 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
+                <outlet property="additionalButton" destination="0Gf-cJ-ScX" id="zuY-t9-tQ8"/>
                 <outlet property="additionalInfoTextLabel" destination="pTa-7q-pbH" id="Wz7-0R-bYb"/>
                 <outlet property="mainTextLabel" destination="cAv-BK-sGO" id="tFF-LZ-Xv3"/>
             </connections>
+            <point key="canvasLocation" x="26" y="76.5"/>
         </tableViewCell>
     </objects>
 </document>
